--- a/Givehub/Views/Shared/_Layout.cshtml
+++ b/Givehub/Views/Shared/_Layout.cshtml
@@ -1,6 +1,29 @@
-﻿namespace Givehub.Views.Shared
-{
-    public class _Layout
-    {
-    }
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" , initial-scale="1.0">
+    <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/css/app.css" asp-append-version="true">
+    @RenderSection("head", false)
+    <script src="~/js/app.js"></script>
+</head>
+<body data-role="@Context.Session.GetString("ROle")">
+    <header>
+    </header>
+    <main>
+        @RenderBody()
+    </main>
+    <footer>
+    </footer>
+
+    <script src="/js/jquery.min.js"></script>
+    <script src="js/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.validate.unobtrusive.min.js"></script>
+    <script src="js/app.js" asp-append-version="true"></script>
+
+    @RenderSection("scripts", required: false)
+</body>
+
+</html>
