index draft done

--- a/Givehub/Views/Shared/_Layout.cshtml
+++ b/Givehub/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @RenderSection("head", false)
     <script src="~/js/app.js"></script>
 </head>
-<body data-role="@Context.Session.GetString("ROle")">
+<body>
     <header>
         <img src="~/images/logo.png" alt="logo" style="width: 100px; height: 40px;">
         <a href="#" class="header-link">About Us</a>
